--- a/backend/.env
+++ b/backend/.env
@@ -1,33 +1,32 @@
 # Domain
 # This would be set to the production domain with an env var on deployment
-DOMAIN=localhost
+DOMAIN=kmoni.strangled.net
 
 # Environment: local, staging, production
-ENVIRONMENT=local
+ENVIRONMENT=production
 
 PROJECT_NAME="Full Stack FastAPI Project"
 STACK_NAME=full-stack-fastapi-project
 
 # Backend
-BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173"
-SECRET_KEY=changethis123
+BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173,https://kmoni.strangled.net"
+SECRET_KEY=your_production_secret_key
 FIRST_SUPERUSER=devops@hng.tech
-FIRST_SUPERUSER_PASSWORD=devops#HNG11
+FIRST_SUPERUSER_PASSWORD=your_secure_password
 USERS_OPEN_REGISTRATION=True
 
 # Emails
-SMTP_HOST=
-SMTP_USER=
-SMTP_PASSWORD=
-EMAILS_FROM_EMAIL=info@example.com
+SMTP_HOST=smtp.example.com
+SMTP_USER=your_smtp_user
+SMTP_PASSWORD=your_smtp_password
+EMAILS_FROM_EMAIL=info@kmoni.strangled.net
 SMTP_TLS=True
 SMTP_SSL=False
 SMTP_PORT=587
 
 # Postgres
-POSTGRES_SERVER=localhost
+POSTGRES_SERVER=db
 POSTGRES_PORT=5432
-POSTGRES_DB=app
-POSTGRES_USER=app
-POSTGRES_PASSWORD=changethis123
-
+POSTGRES_DB=mydatabase
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
