--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-error-boundary": "^4.0.13",
     "react-hook-form": "7.49.3",
     "react-icons": "5.0.1",
+    "uuid": "^10.0.0",
     "verbose": "^0.2.3"
   },
   "devDependencies": {
