--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   frontend:
     build:
       context: ./frontend
+    ports:
+      - "5000:80"
     networks:
       - webnet
 
@@ -37,10 +39,10 @@ services:
     image: jc21/nginx-proxy-manager:latest
     restart: always
     ports:
-      - "80:80"  # Public HTTP Port
-      - "81:81"  # Admin Web Port
-      - "443:443"  # Public HTTPS Port
-      - "8090:81"  # Nginx Proxy Manager GUI on port 8090
+      - "80:80"    # HTTP Port
+      - "81:81"    # Admin Web Port
+      - "443:443"  # HTTPS Port
+      - "8090:81"  # Nginx Proxy Manager GUI
     volumes:
       - ./data:/data
       - ./letsencrypt:/etc/letsencrypt
@@ -59,7 +61,7 @@ services:
     networks:
       - webnet
     ports:
-      - "80:80"
+      - "80:80"  # Expose nginx on port 80
 
 networks:
   webnet:
