--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 # Domain
 # This would be set to the production domain with an env var on deployment
-DOMAIN=kmoni.strangled.net
+DOMAIN=delightdev.ng
 
 # Environment: local, staging, production
 ENVIRONMENT=production
@@ -9,17 +9,17 @@ PROJECT_NAME="Full Stack FastAPI Project"
 STACK_NAME=full-stack-fastapi-project
 
 # Backend
-BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173,https://kmoni.strangled.net"
-SECRET_KEY=your_production_secret_key
+BACKEND_CORS_ORIGINS="http://delightdev.ng,http://delightdev.ng,https://delightdev.ng,https://delightdev.ng"
+SECRET_KEY=changethis123
 FIRST_SUPERUSER=devops@hng.tech
-FIRST_SUPERUSER_PASSWORD=your_secure_password
+FIRST_SUPERUSER_PASSWORD=devops#HNG11
 USERS_OPEN_REGISTRATION=True
 
 # Emails
-SMTP_HOST=smtp.example.com
-SMTP_USER=your_smtp_user
-SMTP_PASSWORD=your_smtp_password
-EMAILS_FROM_EMAIL=info@kmoni.strangled.net
+SMTP_HOST=
+SMTP_USER=
+SMTP_PASSWORD=
+EMAILS_FROM_EMAIL=info@example.com
 SMTP_TLS=True
 SMTP_SSL=False
 SMTP_PORT=587
@@ -27,6 +27,9 @@ SMTP_PORT=587
 # Postgres
 POSTGRES_SERVER=db
 POSTGRES_PORT=5432
-POSTGRES_DB=mydatabase
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
+POSTGRES_DB=mydatabase
+FIRST_SUPERUSER=admin@example.com
+FIRST_SUPERUSER_PASSWORD=adminpassword
+
