--- a/nginx.conf
+++ b/nginx.conf
@@ -18,24 +18,19 @@ http {
 
     server {
         listen 80;
-        server_name kmoni.strangled.net www.kmoni.strangled.net frontend.kmoni.strangled.net backend.kmoni.strangled.net db.kmoni.strangled.net proxy.kmoni.strangled.net;
+        server_name delightdev.ng www.delightdev.ng delightdev.ng delightdev.ng/api db.delightdev.ng proxy.delightdev.ng;
         return 301 https://$host$request_uri;
     }
 
     server {
-        listen 443 ssl;
-        server_name www.kmoni.strangled.net;
-        ssl_certificate /path/to/your/fullchain.pem;
-        ssl_certificate_key /path/to/your/privkey.pem;
-        return 301 https://kmoni.strangled.net$request_uri;
+        listen 443;
+        server_name www.delightdev.ng;
+        return 301 https://delightdev.ng$request_uri;
     }
 
     server {
-        listen 443 ssl;
-        server_name kmoni.strangled.net;
-
-        ssl_certificate /path/to/your/fullchain.pem;
-        ssl_certificate_key /path/to/your/privkey.pem;
+        listen 443;
+        server_name delightdev.ng;
 
         location / {
             proxy_pass http://frontend:80;
@@ -63,11 +58,8 @@ http {
     }
 
     server {
-        listen 443 ssl;
-        server_name db.kmoni.strangled.net;
-
-        ssl_certificate /path/to/your/fullchain.pem;
-        ssl_certificate_key /path/to/your/privkey.pem;
+        listen 443;
+        server_name db.delightdev.ng;
 
         location / {
             proxy_pass http://adminer:8080;
@@ -79,11 +71,8 @@ http {
     }
 
     server {
-        listen 443 ssl;
-        server_name proxy.kmoni.strangled.net;
-
-        ssl_certificate /path/to/your/fullchain.pem;
-        ssl_certificate_key /path/to/your/privkey.pem;
+        listen 443;
+        server_name proxy.delightdev.ng;
 
         location / {
             proxy_pass http://nginx-proxy-manager:81;
