--- a/nginx.conf
+++ b/nginx.conf
@@ -16,21 +16,26 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
+    # Redirect all HTTP traffic to HTTPS
     server {
         listen 80;
-        server_name delightdev.ng www.delightdev.ng delightdev.ng delightdev.ng/api db.delightdev.ng proxy.delightdev.ng;
+        server_name delightdev.ng www.delightdev.ng db.delightdev.ng proxy.delightdev.ng;
         return 301 https://$host$request_uri;
     }
 
     server {
-        listen 443;
+        listen 443 ssl;
         server_name www.delightdev.ng;
+        ssl_certificate /etc/letsencrypt/live/delightdev.ng/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/delightdev.ng/privkey.pem;
         return 301 https://delightdev.ng$request_uri;
     }
 
     server {
-        listen 443;
+        listen 443 ssl;
         server_name delightdev.ng;
+        ssl_certificate /etc/letsencrypt/live/delightdev.ng/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/delightdev.ng/privkey.pem;
 
         location / {
             proxy_pass http://frontend:80;
@@ -41,7 +46,7 @@ http {
         }
 
         location /api {
-            proxy_pass http://backend:80;
+            proxy_pass http://backend:8000;  # Adjusted port to match your backend configuration
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -49,7 +54,7 @@ http {
         }
 
         location /docs {
-            proxy_pass http://backend:80/docs;
+            proxy_pass http://backend:8000/docs;  # Adjusted port to match your backend configuration
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -58,8 +63,10 @@ http {
     }
 
     server {
-        listen 443;
+        listen 443 ssl;
         server_name db.delightdev.ng;
+        ssl_certificate /etc/letsencrypt/live/delightdev.ng/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/delightdev.ng/privkey.pem;
 
         location / {
             proxy_pass http://adminer:8080;
@@ -71,8 +78,10 @@ http {
     }
 
     server {
-        listen 443;
+        listen 443 ssl;
         server_name proxy.delightdev.ng;
+        ssl_certificate /etc/letsencrypt/live/delightdev.ng/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/delightdev.ng/privkey.pem;
 
         location / {
             proxy_pass http://nginx-proxy-manager:81;
