--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,6 @@ services:
       POSTGRES_DB: mydatabase
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"  
     networks:
       - webnet
 
@@ -45,9 +43,9 @@ services:
     image: jc21/nginx-proxy-manager:latest
     restart: always
     ports:
-      - "81:81"    # Admin Web Port
-      - "443:443"  # HTTPS Port
-      - "8090:81"  # Nginx Proxy Manager GUI
+      - "81:81"     # Admin Web Port
+      - "444:443"   # HTTPS Port (changed to avoid conflict)
+      - "8090:81"   # Nginx Proxy Manager GUI
     volumes:
       - ./data:/data
       - ./letsencrypt:/etc/letsencrypt
@@ -59,14 +57,18 @@ services:
   nginx:
     image: nginx:alpine
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - /etc/letsencrypt/live/delightdev.ng:/etc/letsencrypt/live/delightdev.ng:ro
+      - /etc/letsencrypt/archive/delightdev.ng:/etc/letsencrypt/archive/delightdev.ng:ro
     depends_on:
       - frontend
       - backend
+      - nginx-proxy-manager
     networks:
       - webnet
     ports:
-      - "80:80"  # Expose nginx on port 80
+      - "80:80"    # Expose nginx on port 80
+      - "445:443"  # Expose nginx on port 443 (changed to avoid conflict)
 
 networks:
   webnet:
