--- a/nginx.conf
+++ b/nginx.conf
@@ -1,94 +1,98 @@
+worker_processes auto;
+
 events {
     worker_connections 1024;
 }
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
+    upstream frontend {
+        server frontend:5000;
+    }
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+    upstream backend {
+        server backend:8000;
+    }
 
-    access_log  /var/log/nginx/access.log  main;
-    error_log   /var/log/nginx/error.log warn;
+    upstream adminer {
+        server adminer:8080;
+    }
 
-    sendfile        on;
-    keepalive_timeout  65;
+    upstream proxy_manager {
+        server proxy:81;
+    }
 
-    # Redirect all HTTP traffic to HTTPS
+    include /etc/nginx/proxy.conf;
+
+    # Redirect HTTP to HTTPS
     server {
         listen 80;
         server_name delightdev.ng www.delightdev.ng db.delightdev.ng proxy.delightdev.ng;
-        return 301 https://$host$request_uri;
-    }
-
-    server {
-        listen 443 ssl;
-        server_name www.delightdev.ng;
-        ssl_certificate /etc/letsencrypt/live/delightdev.ng/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/delightdev.ng/privkey.pem;
-        return 301 https://delightdev.ng$request_uri;
-    }
-
-    server {
-        listen 443 ssl;
-        server_name delightdev.ng;
-        ssl_certificate /etc/letsencrypt/live/delightdev.ng/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/delightdev.ng/privkey.pem;
 
         location / {
-            proxy_pass http://frontend:5000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    # HTTPS Configuration for main domain
+    server {
+        listen 443 ssl;
+        server_name delightdev.ng www.delightdev.ng;
+
+        ssl_certificate /etc/letsencrypt/live/delightdev.ng/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/delightdev.ng/privkey.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+         location / {
+            proxy_pass http://frontend;
+            include /etc/nginx/proxy.conf;
         }
 
         location /api {
-            proxy_pass http://backend:8000;  # Adjusted port to match your backend configuration
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_pass http://backend/api;
+            include /etc/nginx/proxy.conf;
         }
 
         location /docs {
-            proxy_pass http://backend:8000/docs;  # Adjusted port to match your backend configuration
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_pass http://backend/docs;
+            include /etc/nginx/proxy.conf;
+        }
+
+        location /redoc {
+            proxy_pass http://backend/redoc;
+            include /etc/nginx/proxy.conf;
         }
     }
 
+    # HTTPS Configuration for Adminer
     server {
         listen 443 ssl;
         server_name db.delightdev.ng;
+
         ssl_certificate /etc/letsencrypt/live/delightdev.ng/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/delightdev.ng/privkey.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
         location / {
-            proxy_pass http://adminer:8080;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_pass http://adminer;
+            include /etc/nginx/proxy.conf;
         }
     }
 
+    # HTTPS Configuration for Proxy Manager
     server {
         listen 443 ssl;
         server_name proxy.delightdev.ng;
+
         ssl_certificate /etc/letsencrypt/live/delightdev.ng/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/delightdev.ng/privkey.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
         location / {
-            proxy_pass http://nginx-proxy-manager:81;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_pass http://proxy_manager;
+            include /etc/nginx/proxy.conf;
         }
-    }
+    } 
 }
