--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,77 +1,92 @@
 version: '3.8'
 
 services:
-  frontend:
-    build:
-      context: ./frontend
-    ports:
-      - "5000:80"
-    networks:
-      - webnet
-
   backend:
     build:
       context: ./backend
+    container_name: fastapi_app
     ports:
       - "8000:8000"
-    environment:
-      - DATABASE_URL=postgresql://user:password@db:5432/mydatabase
-      - FIRST_SUPERUSER=admin@example.com
-      - FIRST_SUPERUSER_PASSWORD=adminpassword
+    depends_on:
+      - db
+    env_file:
+      - ./backend/.env
     networks:
-      - webnet  
+      - webnet
+
+  frontend:
+    build:
+      context: ./frontend
+    container_name: nodejs_app
+    ports:
+      - "5000:5000"
+    env_file:
+      - ./frontend/.env
+    networks:
+      - webnet
 
   db:
     image: postgres:13
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: mydatabase
+    container_name: postgres_db
+    ports:
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    env_file:
+      - ./backend/.env
     networks:
       - webnet
 
   adminer:
     image: adminer
+    container_name: adminer
     ports:
       - "8080:8080"
     networks:
       - webnet
 
-  nginx-proxy-manager:
+  proxy:
     image: jc21/nginx-proxy-manager:latest
-    restart: always
+    container_name: nginx_proxy_manager
     ports:
-      - "81:81"     # Admin Web Port
-      - "444:443"   # HTTPS Port (changed to avoid conflict)
-      - "8090:81"   # Nginx Proxy Manager GUI
+      - "83:80"
+      - "445:443"
+      - "8090:81"
+    environment:
+      DB_SQLITE_FILE: "/data/database.sqlite"
     volumes:
       - ./data:/data
       - ./letsencrypt:/etc/letsencrypt
-    environment:
-      - DISABLE_IPV6=true
+    depends_on:
+      - db
+      - backend
+      - frontend
+      - adminer
     networks:
       - webnet
 
   nginx:
-    image: nginx:alpine
+    image: nginx:latest
+    container_name: nginx
+    ports:
+      - "80:80"
+      - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - /etc/letsencrypt/live/delightdev.ng:/etc/letsencrypt/live/delightdev.ng:ro
-      - /etc/letsencrypt/archive/delightdev.ng:/etc/letsencrypt/archive/delightdev.ng:ro
+      - ./Dockerized-FullStack/nginx.conf:/etc/nginx/nginx.conf
+      - ./Dockerized-FullStack/proxy.conf:/etc/nginx/conf.d/proxy.conf
+      - ./letsencrypt:/etc/letsencrypt
     depends_on:
-      - frontend
       - backend
-      - nginx-proxy-manager
+      - frontend
+      - adminer
+      - proxy
     networks:
       - webnet
-    ports:
-      - "80:80"    # Expose nginx on port 80
-      - "445:443"  # Expose nginx on port 443 (changed to avoid conflict)
 
 networks:
   webnet:
 
 volumes:
   postgres_data:
+  data:
+  letsencrypt:
