--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,10 @@ services:
       - db
     env_file:
       - ./backend/.env
+    environment:
+      - DOMAIN=http://52.87.230.149
+      - FIRST_SUPERUSER=devops@hng.tech
+      - FIRST_SUPERUSER_PASSWORD=devops#HNG11
     networks:
       - webnet
 
